   * rdup: really give an error on non-supported files
   * doc: update mirror.sh manpage: removed -z -k from the manual
   * yesterday.sh: work correctly with directories
   * gzip.sh accepts -d option: decompress
   * crypt.sh accepts -d option: decrypt
   * hist.sh: print "d " for directories and replace the backup dir with ... 
   Source dir layout:
   * rename tools -> sh-tools, there is room for scripts in other
   languages
   * rename restore -> sh-restore, same here
   Porting:
   * mirror.sh/rorrim.sh: use cp -RP (works on FreeBSD) 
    (ghostcorps (at) gmail.com)
   * mirror.sh/hist.sh/yesterday.sh: use $OSTYPE to ease portability
   * hist.sh/yesterday.sh: use freebsd's date and some ls foo
   * yesterday.sh: use shell code to mimic 'seq'
   Restore:
   * Added rorrim.sh (this was restore.sh) - restore files to a dir
   * Added monthday.sh - select files to restore
     [still only lightly tested, please help test]
   

30 Mar 2006: 0.2.6 Miek <miek@miek.nl>
   -- script updates and bugfixes --
   * more signal handling was added to the shell scripts, 
     they now echo what file they were processing when 
     they received the signal
   * mirror.sh: actually accept -v as an option
   * mirror.sh: handle filetype changes better 
   * usb-dump.sh: display (zenity) progress dialog when backing up
     moved usb-dump.sh to tools/
   * hist.sh: correctly count backwards x months
   * scripts/ directory was removed
   * rename usb-dump.sh to dump-here.sh, as that is what it does
     

18 Mar 2006: 0.2.5 Miek <miek@miek.nl>
   -- bugfixes --
   * usbdump.sh: be more informative on failed backups
   * error messages cleanup
   * indent is used to force coding style
   * added purge.sh script for deleting older backups
   * dump.sh and purge.sh now both have a manual page
     and are moved to the tools/ directory
   * patch for mirror.sh (add missing $) (Pavel Mracek)
   * Makefile cleanup


10 Mar 2006: 0.2.4 Miek <miek@miek.nl>
   -- bugfixes --