@@ -7,14 +7,55 @@
 
 set -o nounset
 
-declare -a fileexcludelist
-declare -a direxcludelist
-fileexcludelist=".slide_img.* .thumb_img.*"
-direxcludelist="^/lost+found/ ^/proc/ ^/dev/ ^/sys/ .Trash/ .Cache/"
-
+PROGNAME=$0
 S_ISDIR=16384   # octal: 040000 (This seems to be portable...)
 S_ISLNK=40960   # octal: 0120000
 S_MMASK=4095    # octal: 00007777, mask to get permission
+
+_echo2() {
+        echo "** $PROGNAME: $1" > /dev/fd/2
+}
+
+cleanup() {
+        _echo2 "Signal received while processing \`$path', exiting"
+        if [[ ! -z $TMPDIR ]]; then
+                rm -rf $TMPDIR
+        fi
+        exit 1
+}
+# trap at least these
+trap cleanup SIGINT SIGPIPE
+
+usage() {
+        echo "$PROGNAME [OPTIONS] REGEXP"
+        echo
+        echo "apply REGEXP on the filename in the list as generated by rdup"
+        echo
+        echo OPTIONS:
+        echo " -c???     todo"
+        echo " -f        match files and links (default)"
+        echo " -a        match files/links and directories"
+        echo " -d        match directories"
+        echo " -h        this help"
+}
+
+MODE="f" # default to file mode
+while getopts "adfhc" o; do
+        case $o in
+                a) MODE="a";;
+                d) MODE="d";;
+                f) MODE="f";;
+                h) usage && exit;;
+                \?) usage && exit;;
+        esac
+done
+shift $((OPTIND - 1))
+
+if [[ $# -eq 0 ]]; then
+        _echo2 "Need a regular expression as argument"
+        exit 1
+fi
+REGEXP=$1
 
 declare -a path # catch spacing in the path
 while read mode uid gid psize fsize path
@@ -28,24 +69,24 @@ do
         if [[ $(($mode & $S_ISLNK)) == $S_ISLNK ]]; then
                 typ=2;
         fi
-        
+
         case $typ in
                 0|2)      # reg file or link
-                for file in $fileexcludelist; do 
-                        if [[ "$path" =~ $i ]]; then
-                                continue 2 # jump to next while
-                        fi
-                done
-                # don't exclude, print it
+                if [[ $MODE != "a" && $MODE != "f" ]]; then 
+                        continue
+                fi
+                if [[ ! "$path" =~ "$REGEXP" ]]; then
+                        continue
+                fi
                 echo "$dump$mode $uid $gid $psize $fsize $path"
                 ;;
                 1)      # directory
-                for i in $direxcludelist; do 
-                        if [[ "$path" =~ $i ]]; then
-                                continue 2
-                        fi
-                done
-                # don't exclude, print it
+                if [[ $MODE != "a" && $MODE != "d" ]]; then
+                        continue
+                fi
+                if [[ ! "$path" =~ $REGEXP ]]; then
+                        continue 
+                fi
                 echo "$dump$mode $uid $gid $psize $fsize $path"
                 ;;
         esac
