@@ -10,19 +10,17 @@ TODO:
 
 :porting:
 
-
 :LOW PRIO:
 :hdup2:
 o make complete hdup2 clone based on rdup
   see hdup2 directory
   I want to see this, but I don't have enough time for this.
 
-:scripts:
-o split up rdgrep.sh in dir and file grep?
-
-
 
 :DONE:
+o split up rdgrep.sh in dir and file grep?
+  10 Apr 2006: done
+  
 o check relative filenames: hist.sh ../blaat
   09 Apr 2006: done, just works :)
 
